# JSON-Chunking

./: .coverage  .dockerignore  .env  .pre-commit-config.yaml  0001-feat-implement-comprehensive-frontend-performance-op.patch  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  analytics-components-test.js  browser_test_summary.md  complex-building-data.json  comprehensive-ui-test.js  coverage.xml  debug-query-page.js  debug-query-submit.js  debug-submit-button.js  docker-compose.yml  final-performance-report.js  final-production-test.js  frontend-performance-test.js  package-lock.json  package.json  performance-test-final.js  performance-test-fixed.js  performance-test-simple.js  playwright.config.ts  pyproject.toml  run_server.py  setup.cfg  simple-results-test.js  simple-ui-test.js  test-browser-basic.js  test-browser-e2e.js  test-complete-workflow.js  test-components-standalone.js  test-cross-browser.js  test-e2e-complete.js  (+25 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  performance-tests.yml  release.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  system_commands.md  task_completion_checklist.md  tech_stack.md
dev-scripts/: README.md  debug_intent_test.py  test_advanced_aggregation_integration.py  test_api.py  test_phase2_chunking_strategies.py  test_phase3_integration.py  test_phase3_simplified.py
docs/: PERFORMANCE.md  implementation-plan-issue-44.md  issue-7-fix-summary.md  scratchpad-frontend-complete-implementation-plan.md  scratchpad-issue-1-project-foundation.md  scratchpad-issue-2-streaming-json-processing.md  scratchpad-issue-3-ifc-semantic-chunking.md  scratchpad-issue-4-gemini-integration.md  scratchpad-issue-42-results-page-implementation.md  scratchpad-issue-43-real-time-query-status-updates.md  scratchpad-issue-44-query-history-management.md  scratchpad-issue-45-file-management-enhancement.md  scratchpad-issue-46-user-settings-preferences.md  scratchpad-issue-47-enhanced-query-interface.md  scratchpad-issue-5-query-orchestration.md  scratchpad-issue-50-frontend-performance-optimization.md  scratchpad-issue-53-advanced-analytics-dashboard.md  scratchpad-issue-53-analytics-dashboard-completion.md  scratchpad-issue-53-implementation-plan.md  scratchpad-issue-54-pwa-offline-support.md  scratchpad-issue-6-advanced-aggregation.md  scratchpad-issue-7-status-check.md  scratchpad-issue-7-web-interface-api.md  scratchpad-issue-7-web-interface.md  scratchpad-issue-8-analysis-and-completion-plan.md  scratchpad-issue-8-performance-optimization-production-readiness.md  scratchpad-issue-9-comprehensive-testing-quality-assurance.md  scratchpad-issue-9-implementation-plan.md
examples/: query_processing_example.py
frontend/: .env  .eslintrc.cjs  .lighthouserc.json  FILESELECTOR_TEST_REPORT.md  analytics-test-report.md  index.html  package-lock.json  package.json  playwright.config.analytics.ts  playwright.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  offline.html  sw.js
frontend/public/icons/: generate-icons.html
frontend/scripts/: generate-pwa-icons.js
frontend/src/: App.tsx  main.tsx  test-setup.ts  vite-env.d.ts
frontend/src/data/: queryTemplates.ts
frontend/src/hooks/: useConnectionStatus.ts  useErrorHandler.ts  useFavoriteTemplates.ts  useNetworkStatus.ts  useQueryPage.ts  useQueryPreview.ts  useResponsiveLayout.ts  useTemplateCustomization.ts  useTemplateFiltering.ts  useTemplateSection.ts
frontend/src/pages/: Dashboard.tsx  DocumentationPage.tsx  HistoryPage.tsx  QueryPage.tsx  ResultsPage.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/services/: analyticsService.ts  api.ts  connectionManager.ts  offline.ts  preferences.ts  serviceWorker.ts  sync.ts  websocket.ts
frontend/src/stores/: analyticsStore.ts  appStore.ts  fileStore.ts  index.ts  offlineFileStore.ts  offlineQueryStore.ts  queryStore.ts  settingsStore.ts
frontend/src/types/: analytics.ts  api.ts  app.ts  index.ts  vitest.d.ts
frontend/src/utils/: cache.ts  errorUtils.ts  export.ts  performance.ts  queryPreviewGenerator.ts  responsiveUtils.ts  time.ts
frontend/tests/performance/: regression.test.js  setup.js
playwright-report/: index.html
spec/: frontend_performance_optimization_spec.rb
spec/components/: connection_error_handler_spec.rb
spec/frontend/: sandi_metz_compliance_spec.rb
src/ifc_json_chunking/: __init__.py  __main__.py  chunking_strategies.py  cli.py  config.py  core.py  exceptions.py  ifc_schema.py  logging.py  models.py  overlap.py  progress.py  relationships.py  strategy.py  streaming.py  token_counter.py  tokenization.py
src/ifc_json_chunking/aggregation/: __init__.py
src/ifc_json_chunking/llm/: __init__.py  chunk_processor.py  gemini_client.py  rate_limiter.py  types.py
src/ifc_json_chunking/monitoring/: __init__.py  alert_system.py  apm_integration.py  memory_profiler.py  metrics_collector.py  metrics_dashboard.py
src/ifc_json_chunking/optimization/: __init__.py  (+1 more)
temp/uploads/: 18541c48-4431-4324-be68-7086c82ea1b7.json  25c0bc07-15ca-47ed-946b-6fc5f9adaa8f.json  2ef121da-1af4-4e2b-a5da-b03fcb222670.json  52744839-a54f-49fc-9aca-c1dece23168e.json  62863af1-7a10-40f9-8ecc-fcff0e8852fa.json  86aaf86a-97e8-46f9-9dee-0a8fd7742310.json  a60968dd-ee11-49ff-97ee-c15cbe5b8e8b.json  c0427805-04f7-4ca5-900c-444e2c6ace3d.json  e043182c-ac3f-4976-badf-860b94d9d99b.json
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_core_streaming.py  test_exceptions.py  test_ifc_schema.py  test_llm_integration.py  test_orchestration.py  test_progress.py  test_real_world_data.py  test_storage_systems.py  test_streaming.py  test_web_api.py
tests/fixtures/: workflow-test.json
tests/page-objects/: BasePage.js  QueryPage.js  UploadPage.js
tests/performance/: __init__.py  test_benchmarks.py  test_load_testing.py  test_performance_behavior.py  test_production_config.py
(+145 files in other folders)
