[metadata]
name = ifc-json-chunking
version = attr: ifc_json_chunking.__version__
description = A Python package for processing and chunking Industry Foundation Classes (IFC) data in JSON format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m2ix4i/JSON-Chunking
author = IFC JSON Chunking Team
author_email = team@ifcjsonchunking.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ifc-chunking = ifc_json_chunking.cli:main

# Flake8 configuration (legacy support)
[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503, F403, F401
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    venv,
    .tox,
    .mypy_cache,
    .pytest_cache

# pydocstyle configuration
[pydocstyle]
convention = google
match-dir = (?!tests).*
match = (?!test_).*\.py

# Tool configuration for setuptools-scm
[tool:pytest]
# This section is kept for legacy compatibility
# Main pytest config is in pyproject.toml